CIVET Release Notes
This document describes the high-level changes made to the civet software from
release to release.  It is cumulative, with the most recent changes listed
first.  The most up-to-date version is in the civet git repository
redmine:/var/git/civet.git

Version 1.7.3
-------------
Features
 - Add new "pipeline_root" attribute for <dir> tag.  If true, Civet will set
   the directory to the pipeline's XML root directory.
 - datestamp_prepend can now be combined with append and datestamp_append tags
 - Use "module purge" to clear loaded modulefiles rather than bash function

Version 1.7.2
-------------
Bug fixes
 - Fix 1.7.x regression that broke <related> files in <foreach>

Version 1.7.1
-------------
Bug fixes
 - Fix bug where job epilogue was not run for the Consolidate Logs job for
   TORQUE systems with "spool_as_final_name true" pbs_mom configuration

Version 1.7.0
-------------
Bug fixes
 - Summary mode of civet_status now indicates terminated pipelines
   (pipelines where one or more job was cancelled or deleted either manually or 
   by the batch system)

Features
 - Pipeline log directory is now included in failure emails
 - Use TORQUE job epilogue to catch termination due to walltime violation and
   provide more useful error messages and logging.
 - Log username in the command_line.txt file
 - Increase limit for maximum number of jobs spawned by foreach
 - Add recursive mode for civet_cancel
 - Add new "from_file" attribute for <dir> tag, will assign the parent
   directory of a file to the <dir> tag
 - Each job that initiates an abort pipeline process now creates its own
   abort.log file (now JOBNAME-abort.log)

Version 1.6.2
-------------
Bug fixes
 - none

Features
 - filelist parameter can now have 'input' attribute.  If true,  each file
   in list will be checked to see if it exists at submit time.

Version 1.6.1
-------------
Bug fixes
 - Fix handling of absolute paths for tool definition files